Report references updated.

--- a/Report/biblib.bib
+++ b/Report/biblib.bib
@@ -41,13 +41,19 @@ Code solution links
 
 Links
 @misc{wikiDouble,
-	title 			= {{Wikipedia} - How to convert string to char array in C++},
+	title 			= {{Wikipedia} - Double-precision floating-point format},
 	howpublished	= {https://en.wikipedia.org/wiki/Double-precision_floating-point_format},
 	note			= {Accessed: 2017-10-15}
 }
 
+@misc{wikiLongDouble,
+	title 			= {{Wikipedia} - long double},
+	howpublished	= {https://en.wikipedia.org/wiki/Long_double},
+	note			= {Accessed: 2017-10-16}
+}
+
 @misc{cpp11FAQ,
-	title 			= {C++11 - the new ISO C++ standard},
+	title 			= {C++11 - The new ISO C++ standard},
 	howpublished	= {http://www.stroustrup.com/C++11FAQ.html},
 	note			= {Accessed: 2017-10-15}
 }
