Updated (removed) missing features and bugs list.

--- a/Report/calculator_report.tex
+++ b/Report/calculator_report.tex
@@ -776,13 +776,13 @@
 	
 			The program (part 4) runs on a loop, which allows the user to calculate as much as they want, without having to reopen the program for every line.
 			It supports addition (+), subtractions (-), multiplication (*), division (/), modulus/remainder (\%), power (\^~), as well as bracketed mathematics. \\
-			There are still some bugs with formatting of the input:
-			\begin{itemize}
-				\item Requires operator before and after bracket when doing multiplication [i.e. "2(4.." should be "2*(4.."].
-				\item Does not like starting or ending with a bracket ["(1+2)" is bad, "1+(2+3)+4" is fine].
+			%There are still some bugs with formatting of the input:
+			%\begin{itemize}
+				%\item Requires operator before and after bracket when doing multiplication [i.e. "2(4.." should be "2*(4.."].
+				%\item Does not like starting or ending with a bracket ["(1+2)" is bad, "1+(2+3)+4" is fine].
 				%\item Some issues with multiple bracket pairs after each other ["1+(2+(3+4))+5" is fine, "1+(2+3)+(4+5)+6" is problematic].
 				% Fixed by making bracket check if(...) -> while(...)
-			\end{itemize}
+			%\end{itemize}
 		% End of Summary
 	% End of section 3 - Results
 	
