Added GitHub links in report.

--- a/Report/calculator_report.tex
+++ b/Report/calculator_report.tex
@@ -792,8 +792,11 @@
 		I therefore did not implement as many rule checks and exception handling (and because I did not find this as entertaining and educational as other projects I was working on). If I were to redo it at some point, I would design it more object oriented, and with more pointers and references. I would probably use a deque or preferably list instead of vector, due to their more efficient changing (and insertions).
 		I could have also added a prettier user interface, but this project did not ask for any such thing, and I therefore kept it simple. This also makes sense if using it in other projects. I would also like to expand its functionality to allow for solving basic algebra.
 		The project became a bit unstructured towards the end, as the changes was cumulatively added from part 1 to part 4. The code may be designed better if planned according to the final plan, rather than part by part.
-		
 	% End of section 4 - Discussion
+	\\ \\ \\ \\ \\ \\
+	GitHub repository for the project: \\
+	\href{https://github.com/catsymptote/cppCalculatorAssignment}{Web repo} \\
+	\href{https://github.com/catsymptote/cppCalculatorAssignment.git}{.git}
 	
 	
 	\clearpage
